# iibot

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-tbank.txt
configs/: README.md  local_pack_cnyrubf_ta_aggressive.toml  local_pack_cnyrubf_ta_candidate.toml  local_pack_cnyrubf_ta_walk_forward.toml  local_pack_fx_index_ta_aggressive.toml  local_pack_research.toml  local_pack_server_multi_300k.toml  local_pack_server_multi_300k_focused.toml  local_pack_server_pair_cny_usd_candidate.toml  local_pack_stocks_intraday_300k.toml  local_pack_stocks_intraday_300k_focused.toml  local_pack_ta_research.toml  local_pack_usdrubf_candidate.toml  paper.toml  server_tbank_cnyrubf_premium.toml  server_tbank_stocks_intraday_300k.toml  server_tbank_stocks_intraday_300k_focused.toml
configs/experiments/: README.md  local_pack_stocks_intraday_300k_15min.toml  local_pack_stocks_intraday_300k_focused_15min_240d.toml  (+3 more)
deploy/: README.md
docs/: README.md
scripts/: README.md
src/: README.md
tests/: README.md  test_adaptive_entry.py  test_autonomy_trade_evidence.py  test_backtest.py  test_cli.py  test_daily_review.py  test_dashboard.py  test_effective_config.py  test_entry_confirmation.py  test_entry_feedback_bootstrap.py  test_entry_quality_tuning.py  test_exit_tuning.py  test_golden_baseline.py  test_market_regime.py  test_microstructure_collector.py  test_minimal_dashboard.py  test_ml_learning.py  test_moex_data_pack_provider.py  test_offline_parquet_cache.py  test_optimizer.py  test_order_book_microstructure.py  test_paper_autonomy.py  test_paper_broker.py  test_paper_cycle.py  test_parquet_directory_provider.py  test_project_goal_config.py  test_risk_manager.py  test_runtime_metadata.py  test_server_autonomy_config.py  test_short_ev_engine.py  test_signal_feedback.py  test_strategy_ta.py  test_strategy_tuning.py  test_tbank_data_provider.py  test_token_file.py  test_trade_review.py  test_universe_selection.py  test_update_offline_parquet_cache.py
(+70 files in other folders)
