[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "moex-ai-trader"
version = "0.1.0"
description = "Goal-driven paper-trading system for MOEX with T-Bank Invest API integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.2,<2.3",
  "pandas>=3.0",
  "pyarrow>=24.0",
  "pandas-ta>=0.4.71b0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
ml = [
  "setuptools<81",
  "scikit-learn==1.9.0",
  "xgboost==3.3.0",
  "lightgbm==4.6.0",
  "catboost>=1.2.10",
  "shap>=0.52",
  "imbalanced-learn>=0.14.2",
  "category-encoders>=2.8.1",
  "feature-engine>=1.9.4",
  "tsfresh>=0.21.2",
  "arch>=8.0",
  "ruptures>=1.1.10",
  "hmmlearn>=0.3.3",
  "pyod>=3.6.1",
  "scikit-optimize>=0.10.2",
  "hyperopt>=0.2.7",
  "optuna>=4.9",
  "optuna-integration>=4.9",
  "optuna-dashboard>=0.20",
  "mlflow-skinny>=3.14",
  "statsmodels>=0.14.6",
  "duckdb>=1.5",
  "polars>=1.42",
  "numexpr>=2.14",
  "bottleneck>=1.6",
  "matplotlib>=3.11",
  "seaborn>=0.13",
  "plotly>=6.8",
  "bokeh>=3.9",
  "altair>=6.2",
  "kaleido>=1.3",
  "yellowbrick>=1.5",
  "backtesting>=0.6.5",
  "backtrader>=1.9.78",
  "quantstats>=0.0.81",
  "PyPortfolioOpt>=1.6",
  "cvxpy>=1.9",
  "exchange-calendars>=4.13",
  "pandas-market-calendars>=5.4",
  "yfinance>=1.5",
  "apimoex>=1.4",
  "moexalgo>=2.5",
  "requests-cache>=1.3",
  "pyjanitor>=0.32",
  "pandera>=0.32",
  "pydantic-settings>=2.14",
  "hypothesis>=6.155",
  "lime>=0.2.0.1",
  "mlxtend==0.23.4",
  "ta>=0.11",
  "stockstats>=0.6.8",
  "dask>=2026.6",
  "distributed>=2026.6",
  "rich>=15.0",
  "tqdm>=4.68",
]

[project.scripts]
samosbor = "samosbor.cli:main"
moex-ai-trader = "samosbor.cli:main"
moex-ai-dashboard = "samosbor.minimal_dashboard:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
